--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist-ssr
 coverage
 *.local
 
+dist/
 /cypress/videos/
 /cypress/screenshots/
 
@@ -25,5 +26,4 @@ coverage
 *.njsproj
 *.sln
 *.sw?
-
 *.tsbuildinfo
