--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "build": "vite build && copy dist\\index.html dist\\404.html",
     "preview": "vite build && vite preview",
     "deploy": "git subtree push --prefix dist origin gh-pages",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "lint": "npm run lintbase && npm run linthtml && npm run lintcss",
+    "lintbase": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "linthtml": "htmlhint *.html",
+    "lintcss": "stylelint src/**/*.{css,scss,vue} --fix"  
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -22,7 +25,10 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "htmlhint": "^1.3.0",
     "prettier": "^3.2.5",
+    "stylelint": "^16.20.0",
+    "stylelint-config-standard": "^38.0.0",
     "vite": "^5.2.8"
   }
 }
