--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://liuddy.github.io/portfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build && copy dist\\index.html dist\\404.html",
     "preview": "vite build && vite preview",
-    "deploy": "git subtree push --prefix dist origin gh-pages",
+    "deploy": "gh-pages -d dist",
     "format": "prettier --write src/",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "linthtml": "htmlhint *.html",
@@ -24,6 +25,7 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "gh-pages": "^6.3.0",
     "htmlhint": "^1.3.0",
     "postcss-html": "^1.8.0",
     "prettier": "^3.2.5",
