--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "private": true,
   "type": "module",
   "homepage": "https://liuddy.github.io/portfolio",
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not and_qq > 0",
+    "not and_uc > 0",
+    "not kaios > 0",
+    "not op_mini all"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build && copy dist\\index.html dist\\404.html",
@@ -23,14 +31,17 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
+    "browserslist": "^4.25.0",
+    "doiuse": "^6.0.5",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "gh-pages": "^6.3.0",
     "htmlhint": "^1.3.0",
     "postcss-html": "^1.8.0",
     "prettier": "^3.2.5",
-    "stylelint": "^15.10.3",
-    "stylelint-config-standard": "^34.0.0",
+    "stylelint": "^16.20.0",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-no-unsupported-browser-features": "^8.0.4",
     "vite": "^5.2.8"
   }
 }
