--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && copy dist\\index.html dist\\404.html",
-    "preview": "vite build && vite preview",
+    "preview": "npm run build && vite preview",
     "deploy": "gh-pages -d dist",
     "format": "prettier --write src/",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
