Ajout de filtres pour les projets (+ améliorations diverses)

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -231,7 +231,7 @@
     "allTech": ["HTML", "CSS", "JavaScript", "Python", "Git", "Visual Studio Code"],
     "skills": [1, 2, 3, 8],
     "team": "groupe",
-    "environment": "universitaire"
+    "environment": "professionnel"
   },
   {
     "name": "Crazymo",
